YNDX (refactor): актуализация тестовых классов (branch: module_two_seven_branch)